[build-system]
requires = [
    'setuptools >= 60',
    'cython >= 3.0.8',
    'numpy >= 1.23.5',
    'wheel >= 0.37.1'
]
build-backend = 'setuptools.build_meta'


[tool.cibuildwheel]
# Disable building PyPy wheels on all platforms
skip = 'pp* cp36-* cp37-* *-win32 *i686'

# On an Linux Intel runner with qemu installed, build Intel and ARM wheels
[tool.cibuildwheel.linux]
archs = ['x86_64', 'aarch64']


[tool.pyright]
include = ['speedups', 'tests']
venvPath = '.'
stubPath = '.'
pythonVersion = '3.8'
pythonPlatform = 'All'
typeCheckingMode = 'standard'
strict = ['speedups']

[tool.codespell]
ignore-words-list = 'nd'

[tool.black]
line-length = 79
skip-string-normalization = true
