[metadata]
name = speedups
version = attr: speedups.__about__.__version__
long_description = file: README.rst
keywords = Cython, C, C++, speedups, Numpy, PostgreSQL, PsycoPG
license = BSD 3-Clause License

[options]
packages = speedups
python_requires = >=3.7
zip_safe = False

install_requires =
    numpy >= 1.21.5

include_package_data = True
[options.package_data]
* =
    *.pyx
    *.pxd
    *.h
    *.hpp
    *.h++
    *.c
    *.cpp
    *.c++
    py.typed

[options.extras_require]
postgres = psycopg>=3.0.8
tests =
    psycopg[binary]>=3.0.8
    pytest>=6.2.5
    pytest-postgresql>=4.1.0
